Add logic and template for  list beneficiary by rq

--- a/src/main/resources/templates/index_D.html
+++ b/src/main/resources/templates/index_D.html
@@ -79,7 +79,7 @@
                                 <h5 class="card-title">DONA MUEBLES</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten muebles para sus espacios.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/furnitures}" > Conoce mas</a>
                             </div>
 
                         </div>
@@ -96,7 +96,7 @@
                                 <h5 class="card-title">DONA ALIMENTOS</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/food}"> Conoce mas</a>
 
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                 <h5 class="card-title">DONA DINERO</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/monetary_aid}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                                 <h5 class="card-title">DONA MEDICAMENTOS</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/medical_supplies}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 <h5 class="card-title">DONA INDUMENTARIA</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten indumentaria.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/clothing}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                                 <h5 class="card-title">DONA UTILES ESCOLARES Y/0 LIBROS</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten utiles escolares y/o libros.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/school_supplies}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                 <h5 class="card-title">DONA JUGUETES</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos..</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/toys}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                                 <h5 class="card-title">POSTULATE COMO VOLUNTARIO</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos.</p>
-                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/voluntary}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
