agregando estilo para editB

--- a/src/main/resources/static/style_update.css
+++ b/src/main/resources/static/style_update.css
@@ -166,3 +166,15 @@ main{
     margin-bottom: 15px;
 
 }
+
+/*stylo perfil*/
+.hov{
+    
+    text-decoration: none;
+    color: #000;
+}
+.hov:hover{
+    color:red;
+    font-size:large;
+
+}
