Add images in static imagines and put it in index donor

--- a/src/main/resources/templates/index_D.html
+++ b/src/main/resources/templates/index_D.html
@@ -113,7 +113,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">DONA DINERO</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
-                                    que necesiten Alimentos.</p>
+                                    que necesiten Dinero.</p>
                                 <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/monetary_aid}"> Conoce mas</a>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">DONA MEDICAMENTOS</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
-                                    que necesiten Alimentos.</p>
+                                    que necesiten insumos médicos.</p>
                                 <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/medical_supplies}"> Conoce mas</a>
                             </div>
                         </div>
@@ -162,9 +162,9 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">DONA UTILES ESCOLARES Y/0 LIBROS</h5>
+                                <h5 class="card-title">DONA UTILES ESCOLARES Y/0 LIBROS ESCOLARES</h5>
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
-                                    que necesiten utiles escolares y/o libros.</p>
+                                    que necesiten utiles escolares y/o libros escolares.</p>
                                 <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/school_supplies}"> Conoce mas</a>
                             </div>
                         </div>
@@ -199,6 +199,40 @@
                                 <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
                                     que necesiten Alimentos.</p>
                                 <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/voluntary}"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                       <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/book.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA LIBROS</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten libros como novelas,cuentos,..</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/toys}"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                      <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/legacies.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA LEGADOS</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten espacios fisicos para poder dar uso de sus servicios en estas instalaciones..</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" th:href="@{/donor/ListBeneficiaryByReq/toys}"> Conoce mas</a>
                             </div>
                         </div>
                     </div>
