--- a/src/main/resources/templates/perfil_b.html
+++ b/src/main/resources/templates/perfil_b.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <link rel="stylesheet" href=""><!--utilizar css style_update-->
+    <link rel="stylesheet" href="../front-e/style_update.css"><!--usa el mismo css que update-->
+    <!--utilizar css style_update-->
     <title>Solidaridad Compartida</title>
+    <script src="https://kit.fontawesome.com/185495c89f.js" crossorigin="anonymous"></script>
+    <style>
+        #foto {text-align: center;}
+        #icon{color:  #ee7724;font-size: large;}
+        #icon1{color:#d8363a;font-size: large;}
+        #icon2{color:#dd3675;font-size: large;}
+        #icon3{color:#b44593;font-size: large;}
+        #icon4{color:#6f4662;font-size: large;}
+        #icon5{color:#413a3e;font-size: large;}
+    </style>
 </head>
+
 <body>
     <!--header-->
     <header>
@@ -18,7 +31,6 @@
         </div>
         <nav>
             <a href="" class="link">Home</a>
-            <a href="" class="link">Editar perfil</a>
             <a href="" class="link">Posteos</a>
             <a href="" class="link">Cerrar Sesion</a>
             <!--<a href="" class="link"></a>-->
@@ -27,62 +39,81 @@
     <!--header-->
     <!--main-->
     <main>
-            <!--<h3 id="title2"></h3>-->
-            <form class="register2" action="">
-                <p><strong>¡¡Queremos saber más de vos!!
-                    <br>Sube una foto, pon el nombre de tu institución y haz una breve descripción</strong></p>
+        <!--<h3 id="title2"></h3>-->
+        <form class="register2" action="">
+          
 
-                <h3 id="title2">Tus datos</h3>
+            <h3 id="title2">Tus datos</h3>
+            
+            <div class="form-group my-3" id="foto">
+                <img src="" alt="foto-Perfil"
+                    style="width: 65px;height: 70px;border-radius: 40px;">
+            </div>
 
-                <div class="form-group my-3">
-                    <img src="../front-e/img-login/IMG-20221004-WA0086.jpg" alt="fotPerfil" style="width: 65px;height: 70px;border-radius: 40px;">
-                </div>
+            <div class="form-group my-3" id="icon">
+                <i class="fa-solid fa-id-badge"></i>
+                <label for="text">Nombre: </label>
+                <h6 name="name"></h6>
+            </div>
 
-                <div class="form-group my-3">
-                    <h6 name="name"  type="text"></h6>
-                </div>
+            <div class="form-group my-3" id="icon1">
+                <i class="fa-regular fa-envelope"></i>
+                <label for="text">Email: </label>
+                <h6 name="email"></h6>
+            </div>
 
-                <div class="form-group my-3">
-                    <h6 name="description" type="text"></h6>
-                </div>
+            <div class="form-group my-3" id="icon2">
+                <i class="fa-solid fa-phone"></i>
+                <label for="text">Teléfono: </label>
+                <h6 name="tel"></h6>
+            </div>
 
-                <div class="form-group my-3">
-                    <h6 name="email"  type="email"></h6>
-                </div>
+            <div class="form-group my-3" id="icon3">
+                <i class="fa-solid fa-map-location-dot"></i>
+                <label for="text">Dirección: </label>
+                <h6 name="address"></h6>
+            </div>
 
-                <div class="form-group my-3">
-                    <h6 name="tel"  type="number"></h6>
-                </div>
+            <div class="form-group my-3" id="icon4">
+                <i class="fa-solid fa-rectangle-list" ></i>
+                <label for="text">Descripción: </label>
+                <h6 name="description"></h6>
+            </div>
 
-                <div class="form-group my-3">
-                    <h6 name="address"  type="text"></h6>
-                </div>
+            <div class="form-group my-3" id="icon5">
+                <i class="fa-solid fa-list-check" ></i>
+                <label for="text">Tus necesidades:</label>
+                <ul name="">
+                    <li>
+                        #
+                    </li>
 
-                <div class="form-group my-3">
-                    <h6>Tus necesidades:</h6>
-                    <ul name="">
-                        <li>
-                            #
-                        </li>
-                    </ul>
-                </div>
+                    <li>
+                    </li>
 
-            </form>
+                    <li>
+                    </li>
+                </ul>
+            </div>
+
+            <a href="" class="hov">Editar perfil</a>            
+        </form>
 
     </main>
     <!--fin main-->
 
-<!--footer-->
-<footer>
-    <div>
-        <p>&copy; 2022 Solaridad compartida. </p>
-    </div>
+    <!--footer-->
+    <footer>
+        <div>
+            <p>&copy; 2022 Solaridad compartida. </p>
+        </div>
 
-</footer>
-<!--fin footer-->
+    </footer>
+    <!--fin footer-->
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
