--- a/src/main/resources/templates/editPost_beneficiary.html
+++ b/src/main/resources/templates/editPost_beneficiary.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <link rel="stylesheet" href=""><!--utilizar css style_update.css-->
+        <link rel="stylesheet" href="../front-e/style_update.css">
     <title>Solidaridad Compartida</title>
+    <style>
+        .hov{text-decoration: none;color: #000;}
+        .hov:hover{color:red;font-size:large;}
+    </style>
 </head>
 <body>
     <!--header-->
@@ -40,33 +44,33 @@
 
                 <div class="form-group my-3">
                     <label for="text">Nombre de institución</label>
-                    <input type="text" name="titulo" class="form-control">
-                   
-                    <a href="" class="hov">Eliminar</a>
-                </div>
-
-                <div class="form-group my-3">
-                    <label for="text">Descripción</label>
-                    <textarea class="form-control" rows="3" name="cuerpo"></textarea>
+                    <input type="text" name="titulo" class="form-control" placeholder="Merendero Sonrisas / Escuela n°1">
                    
                     <a href="" class="hov">Eliminar</a>
                 </div>
 
                 <div class="form-group my-3">
                     <label for="email">Email</label>
-                    <input type="email" name="email" class="form-control">
+                    <input type="email" name="email" class="form-control" placeholder="escuela@escuela.com">
                     <a href="" class="hov">Eliminar</a>
                 </div>
 
                 <div class="form-group my-3">
                     <label for="number">Teléfono</label>
-                    <input type="number" name="tel" class="form-control">
+                    <input type="number" name="tel" class="form-control" placeholder="11 2356 8923">
                     <a href="" class="hov">Eliminar</a>
                 </div>
 
                 <div class="form-group my-3">
                     <label for="text">Dirección</label>
-                    <input type="text" name="address" class="form-control">
+                    <input type="text" name="address" class="form-control" placeholder="Av De Mayo 1000">
+                    <a href="" class="hov">Eliminar</a>
+                </div>
+
+                <div class="form-group my-3">
+                    <label for="text">Presentación</label>
+                    <textarea class="form-control" rows="3" name="cuerpo" placeholder="Breve descripción del establecimiento ej:somos un comedor de la provincia de bs as, con 300 chicos..."></textarea>
+                   
                     <a href="" class="hov">Eliminar</a>
                 </div>
 
