Add image load and update

--- a/src/main/resources/static/style_update.css
+++ b/src/main/resources/static/style_update.css
@@ -167,3 +167,15 @@ main{
 
 }
 
+/*stylo edit perfil*/
+.hov{
+    
+    text-decoration: none;
+    color: #000;
+}
+.hov:hover{
+    color:red;
+    font-size:large;
+
+}
+
