--- a/src/main/resources/templates/edit_beneficiary.html
+++ b/src/main/resources/templates/edit_beneficiary.html
@@ -51,26 +51,26 @@
                     <label for="text">Nombre de institución</label>
                     <input type="text" name="titulo" class="form-control" placeholder="Merendero Sonrisas / Escuela n°1">
                    
-                    <a href="" class="hov">Eliminar</a>
+                    <a  th:value="${beneficiary.name}" class="hov">Eliminar</a>
                 </div>
 
                 <div class="form-group my-3">
                     <label for="email">Email</label>
                     <input type="email" name="email" class="form-control" placeholder="escuela@escuela.com">
-                    <a href="" class="hov">Eliminar</a>
+                    <a  th:value="${beneficiary.email}"class="hov">Eliminar</a>
                 </div>
 
-                <div class="form-group my-3">
+                 <!--<div class="form-group my-3">
                     <label for="number">Teléfono</label>
                     <input type="number" name="tel" class="form-control" placeholder="11 2356 8923">
                     <a href="" class="hov">Eliminar</a>
-                </div>
+                </div>-->
 
-                <div class="form-group my-3">
+               <!-- <div class="form-group my-3">
                     <label for="text">Dirección</label>
                     <input type="text" name="address" class="form-control" placeholder="Av De Mayo 1000">
                     <a href="" class="hov">Eliminar</a>
-                </div>
+                </div>-->
 
                 <div class="form-group my-3">
                     <label for="text">Presentación</label>
@@ -102,6 +102,8 @@
                             Prendas de vestir
                         </label>
                     </div>
+                    
+                    
 
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" name="food" value="1" id="food">
