Add better visual list beneficiary by rq

--- a/src/main/resources/templates/index_B.html
+++ b/src/main/resources/templates/index_B.html
@@ -105,7 +105,7 @@
                             </div>
                             <span class="d-block">Luego comparte tu publicación para hacer posible la magia!💫 </span>
                    
-                            <a href="#" style="text-decoration: none;color: red">Mi perfil</a><!--link hacia el perfil del beneficiario-->
+                          <!--  <a href="#" style="text-decoration: none;color: red">Mi perfil</a><!--link hacia el perfil del beneficiario-->
                         </div>
                     </div>
 
