--- a/src/main/resources/templates/index_B.html
+++ b/src/main/resources/templates/index_B.html
@@ -58,7 +58,7 @@
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 
                                  <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page"  th:href="@{/beneficiary/post/__${beneficiary.id}__}">Mis posteos</a>
+                                    <a class="nav-link active" aria-current="page"  th:href="@{/beneficiary/post}">Mis posteos</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" th:href="@{/beneficiary/profile/__${beneficiary.id}__}">Mi perfil</a>
